-------------------------------------------------------------------
Wed Jul 13 07:40:52 UTC 2016 - jreidinger@suse.com

- Do not crash for submenu with double quotes (bnc#986005)
- filter out snapper menuentry ( using double quotes )
- 0.5.1

-------------------------------------------------------------------
Mon Jul 11 13:40:06 UTC 2016 - jreidinger@suse.com

- extend grub.cfg model to construct also full path usable for
  grub2-set-default (bnc#986005)
- 0.5.0

-------------------------------------------------------------------
Thu May 12 08:20:09 UTC 2016 - jreidinger@suse.com

- fix value for GRUB_ENCRYPTED_DISK attribute (bnc#976315)
- 0.4.1

-------------------------------------------------------------------
Wed Mar 30 12:37:22 UTC 2016 - jreidinger@suse.com

- add attribute GRUB_DEFAULT to /etc/default/grub model
  (FATE#317701)
- 0.4.0

-------------------------------------------------------------------
Thu Mar 24 12:43:34 UTC 2016 - jreidinger@suse.com

- fix path to device.map in its model
- 0.3.3

-------------------------------------------------------------------
Thu Mar 24 09:30:35 UTC 2016 - jreidinger@suse.com

- do not modify data during grub_installdevice write (FATE#317701)
- 0.3.2

-------------------------------------------------------------------
Tue Jan 19 08:54:02 UTC 2016 - jreidinger@suse.com

- fix dependency on cfa
- 0.3.1

-------------------------------------------------------------------
Wed Jan 13 13:13:25 UTC 2016 - jreidinger@suse.com

- add attribute GRUB_HIDDEN_TIMEOUT to /etc/default/grub model
- 0.3.0

-------------------------------------------------------------------
Mon Dec 28 08:47:57 UTC 2015 - jreidinger@suse.com

- use new default file handler from base
- 0.2.0

-------------------------------------------------------------------
Wed Dec 16 09:29:54 UTC 2015 - jreidinger@suse.com

- initial package. Supports models for files:
  - /etc/default/grub
  - /boot/grub2/device.map
  - /boot/grub2/grub.cfg