@@ -2,7 +2,8 @@
 Wed Jul 13 07:40:52 UTC 2016 - jreidinger@suse.com
 
 - Do not crash for submenu with double quotes (bnc#986005)
-- filter out snapper menuentry ( using double quotes )
+- Filter out non-bootable menuentries ( a Snapper help label,
+  using double quotes )
 - 0.5.1
 
 -------------------------------------------------------------------
